--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "validator": "^13.7.0"
   },
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
