--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "validator": "^13.7.0"
   },
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
